// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextField > should not receive onChange event when not a number changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary error"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        max="100"
        min="0"
        name="my-textfield"
        type="number"
        value=""
      />
    </div>
    <div
      class="errorContainer"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-triangle-exclamation"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.1-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 168c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm26.7 216a26.7 26.7 0 1 0 -53.3 0 26.7 26.7 0 1 0 53.3 0z"
          fill="currentColor"
        />
      </svg>
       
      Must be a valid number
    </div>
  </div>
</div>
`;

exports[`TextField > should not receive onChange event when number above max changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary error"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        max="100"
        min="0"
        name="my-textfield"
        type="number"
        value="101"
      />
    </div>
    <div
      class="errorContainer"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-triangle-exclamation"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.1-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 168c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm26.7 216a26.7 26.7 0 1 0 -53.3 0 26.7 26.7 0 1 0 53.3 0z"
          fill="currentColor"
        />
      </svg>
       
      Cannot be greater than 100
    </div>
  </div>
</div>
`;

exports[`TextField > should not receive onChange event when number bellow min changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary error"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        max="100"
        min="0"
        name="my-textfield"
        type="number"
        value="-1"
      />
    </div>
    <div
      class="errorContainer"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-triangle-exclamation"
        data-icon="triangle-exclamation"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.1-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 168c-13.3 0-24 10.7-24 24l0 112c0 13.3 10.7 24 24 24s24-10.7 24-24l0-112c0-13.3-10.7-24-24-24zm26.7 216a26.7 26.7 0 1 0 -53.3 0 26.7 26.7 0 1 0 53.3 0z"
          fill="currentColor"
        />
      </svg>
       
      Cannot be less than 0
    </div>
  </div>
</div>
`;

exports[`TextField > should receive onChange event when number changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        name="my-textfield"
        type="number"
        value="1337"
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should receive onChange event when number equal max changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        max="100"
        name="my-textfield"
        type="number"
        value="100"
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should receive onChange event when number equal min changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        min="0"
        name="my-textfield"
        type="number"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should receive onChange event when text changes 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        name="my-textfield"
        type="text"
        value="some value"
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should render a TextField with type number 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        name="my-textfield"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`TextField > should render a TextField with type text 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="textFieldInputContainer textFieldInputKindPrimary"
    >
      <input
        class="textfield"
        data-testid="test-my-textfield-textfield"
        id="my-textfield"
        name="my-textfield"
        type="text"
        value="some value"
      />
    </div>
  </div>
</div>
`;
